--- a/index.html
+++ b/index.html
@@ -5,54 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Birthday Babe</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom right, #1a1a2e, #16213e);
       font-family: 'Segoe UI', sans-serif;
-      overflow: hidden;
-      height: 100vh;
+      background: linear-gradient(135deg,#1a1a2e, #16213e);
+      color: #fff;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
+      min-height: 100vh;
       flex-direction: column;
+      overflow: hidden;
+      padding: 20px;
     }
 
     .card {
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
-      padding: 30px 40px;
-      max-width: 700px;
+      padding: 30px;
+      width: 100%;
+      max-width: 600px;
+      box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
       text-align: center;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
       position: relative;
       z-index: 1;
     }
 
-    .typing-text {
-      font-size: 1.2em;
-      line-height: 1.6;
-      white-space: pre-line;
-      min-height: 200px;
-      margin-top: 20px;
-      display: none;
+    h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
+      color: #ffd6e0;
     }
 
     img {
-      width: 200px;
-      height: auto;
+      width: 100%;
+      max-width:200px;
       border-radius: 20px;
-      margin-bottom: 20px; 
+      margin-bottom: 20px;
       box-shadow: 0 0 15px rgba(255,255,255,0.3);
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
     }
 
     .btn {
       display: inline-block;
-      margin: 0 auto;
+      margin: 10px auto 0 auto; 
       padding: 10px 25px;
       background: #e94560;
       border: none;
@@ -64,7 +64,15 @@
     }
 
     .btn:hover {
-      background: #ff6f91;
+      background: #ff8098;
+    }
+
+    .typing-text {
+      font-size: 1.2em;
+      line-height: 1.6;
+      white-space: pre-line;
+      display: none;
+      min-height: 180px;
     }
 
     .heart {
@@ -110,6 +118,45 @@
         bottom: 100vh;
         opacity: 0;
         transform: translateX(-20px) scale(0.6) rotate(45deg);
+      }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 1.6em;
+      }
+
+      .typing-text {
+        font-size: 1em;
+      }
+
+      .btn {
+        font-size: 0.95em;
+        padding: 10px 22px;
+      }
+
+      img {
+        max-width: 200px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.4em;
+      }
+
+      .typing-text {
+        font-size: 0.95em;
+      }
+
+      .btn {
+        font-size: 0.9em;
+        padding: 10px 18px;
+      }
+
+      img {
+        max-width: 180px;
       }
     }
   </style>
